bk_ida/gccida/c1/ix86_emit_save_regs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_emit_save_regs/src/i386.c:4614:21: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v0); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/ix86_emit_save_regs/src/obj/i386.o] Error 1
